--- a/src_backend/views/bookings-history/main.ejs
+++ b/src_backend/views/bookings-history/main.ejs
@@ -3,9 +3,9 @@
     <h3>Tra cứu đơn đặt bàn</h3>
   </section>
 
-  <form action="/get-bookings-history" method="GET" class="search-form" id="search-form">
-    <input type="number" id="phone-input" name="phone" placeholder="Nhập số điện thoại của bạn... Ví dụ: 0123456789">
-    <input type="text" id="name-input" name="name" placeholder="Nhập tên của bạn... Ví dụ: Nguyễn Văn A">
+  <form action="/bookings-history/" method="GET" class="search-form" id="search-form">
+    <input type="number" id="phone-input" name="Cus_Phone" placeholder="Nhập số điện thoại của bạn... Ví dụ: 0123456789">
+    <input type="text" id="name-input" name="Cus_FullName" placeholder="Nhập tên của bạn... Ví dụ: Nguyễn Văn A">
     <button type="submit" class="submit-btn">Tra cứu</button>
   </form>
 
