--- a/src_backend/views/partials/page-header.ejs
+++ b/src_backend/views/partials/page-header.ejs
@@ -19,13 +19,13 @@
     <% } else { %>
     <ul>
       <li>
-        <a href="/" class="nav-item">
+        <a href="/#booking" class="nav-item">
           <i class="bi bi-journal-check"></i>
           <span>Đặt Chỗ</span>
         </a>
       </li>
       <li>
-        <a href="#" class="nav-item">
+        <a href="tel:0123456789" class="nav-item">
           <i class="bi bi-telephone-fill"></i>
           <span>Liên Hệ</span>
         </a>
