--- a/src_backend/views/reservation/main.ejs
+++ b/src_backend/views/reservation/main.ejs
@@ -94,7 +94,7 @@
         </div>
         <div class="form-group children-count">
           <label for="children-count-input">Số trẻ em</label>
-          <input type="number" id="children-count-input" name="children-count" min="1" placeholder="Số lượng khách">
+          <input type="number" id="children-count-input" name="children-count" placeholder="Số lượng khách">
         </div>
       </div>
       <div class="form-group note">
