--- a/public/admin/all-bookings/all-bookings-page.scss
+++ b/public/admin/all-bookings/all-bookings-page.scss
@@ -82,7 +82,7 @@
                   &.pending {
                      background-color: gs.$primary-color;
                   }
-                  &.approved {
+                  &.approved, &.completed {
                      background-color: gs.$success-color;
                   }
                   &.arrived {
