--- a/src_backend/views/admin/login/login-page.ejs
+++ b/src_backend/views/admin/login/login-page.ejs
@@ -21,6 +21,16 @@
 
   <%- include('../../partials/script-libs') %>
   <script src="/admin/login/login-page.js" defer></script>
+  <script>document.addEventListener("DOMContentLoaded", function () {
+    // Lấy input từ form
+    const usernameInput = document.getElementById("username-input");
+    const passwordInput = document.getElementById("password-input");
+
+    // Điền sẵn username và password
+    usernameInput.value = "admin";
+    passwordInput.value = "123456";
+});
+</script>
 </body>
 
 </html>
